--- a/css/corrida.css
+++ b/css/corrida.css
@@ -13,10 +13,12 @@
 
 .menu-botoes{
     width: 40%;
+    min-width: 382.4px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 15px 25px;
+    margin-bottom: 50px;
 }
 
 .menu-botoes a{
@@ -27,4 +29,12 @@
     color: #010d69;
     padding: 5px 15px;
     border-radius: 5px;
+}
+
+.pistas{
+    width: 100%;
+    height: 600px;
+    background-color: #555;
+    border-top: 2px solid #dcd400;
+    border-bottom: 2px solid #dcd400;
 }
