--- a/css/corrida.css
+++ b/css/corrida.css
@@ -33,8 +33,40 @@
 
 .pistas{
     width: 100%;
-    height: 600px;
+    height: 610px;
     background-color: #555;
     border-top: 2px solid #dcd400;
     border-bottom: 2px solid #dcd400;
+}
+
+.pista-corrida{
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 2px solid #dcd400;
+}
+
+.partida{
+    width: 200px;
+    height: 150px;
+    background-color: #5f5f5f;
+    border-right: 2px solid #dcd400;
+    text-align: center;
+    font-family: "Arial Black";
+    font-size: 50px;
+    color: #ffffff;
+}
+#carro1, #carro2, #carro3, #carro4{
+    position: absolute;
+    left: 200px;
+    margin-top: 62px;
+}
+.chegada{
+    width: 130px;
+    height: 150px;
+}
+
+.chegada img{
+    width: 40px;
+    height: 150px;
+    object-fit: cover;
 }
