--- a/css/corrida.css
+++ b/css/corrida.css
@@ -74,3 +74,11 @@
     height: 120px;
     object-fit: cover;
 }
+
+.modal-overaly{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    
+}
