--- a/css/corrida.css
+++ b/css/corrida.css
@@ -80,5 +80,39 @@
     height: 100%;
     position: fixed;
     top: 0;
-    
+    background-color: rgb(0, 0,0,0.7);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal{
+    background: gray;
+    padding: 8rem 2rem;
+}
+
+fieldset{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 6rem 0;
+}
+
+.modal fieldset legend{
+    font-size: 2rem;
+}
+
+.opcoes{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.opcoes input{
+    width: 20px;
+    height: 20px;
+}
+
+label img{
+    width: 10rem;
 }
