--- a/css/corrida.css
+++ b/css/corrida.css
@@ -21,7 +21,7 @@
     margin-bottom: 25px;
 }
 
-.menu-botoes a{
+a{
     text-decoration: none;
     background: #fff;
     font-family: Arial, Helvetica, sans-serif;
@@ -29,6 +29,11 @@
     color: #010d69;
     padding: 5px 15px;
     border-radius: 5px;
+}
+
+#btn-ini{
+    width: 12rem;
+    margin-top: 2rem;
 }
 
 .pistas{
@@ -84,9 +89,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    visibility: hidden;
+}
+
+.visivel{
+    visibility: visible;
 }
 
 .modal{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background: gray;
     padding: 8rem 2rem;
 }
